# kaspa-trading-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  config.py  logging_config.py  main.py
src/db/: __init__.py  postgres.py  redis_cache.py
src/exchanges/: __init__.py  ccxt_client.py  exchange_manager.py
src/kaspa/: __init__.py  rpc_client.py  wallet.py
src/risk/: __init__.py  rate_limiter.py  risk_engine.py
src/services/: __init__.py  audit.py  metrics.py  notifier.py
src/strategies/: __init__.py  arbitrage.py  base.py  market_maker.py
src/utils/: __init__.py  async_utils.py  timing.py
src/workers/: __init__.py  order_executor.py  orderbook_worker.py  strategy_worker.py
